--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="RjF4OvvPwRDS-6qWgXiolwaLiYKHQDQvtJyLckU_RKM" />
     <title>全能单位转换器</title>
     <style>
         :root {
